[package]
name = "crunchyview-ui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde-wasm-bindgen = "0.4"
gloo-net = "0.2"
js-sys = "0.3.60"
serde = { version = "1.0.140", features = ["derive"] }
wasm-bindgen = { version = "0.2.83", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.33"
web-sys = {version="0.3.60",features=["HtmlVideoElement","Element","HtmlCollection","Event","MouseEvent","VideoPlaybackQuality","TimeRanges","HtmlMediaElement","TextTrack","TextTrackList","HtmlTrackElement","TextTrackMode","EventTarget","HtmlElement","ProgressEvent"]}
rsubs-lib = "0.1.6"
serde_json = "1.0"
base64 = "0.20"
yew = { version="0.20.0", features = ["csr"] }

[build-dependencies]
[workspace]
members = ["src-tauri"]
